# docs/swagger.json
@@ -76,6 +76,18 @@
                                 "$ref": "#/definitions/models.Song"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Неверный формат параметров запроса",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             },
@@ -108,6 +120,18 @@
                         "schema": {
                             "$ref": "#/definitions/models.Song"
                         }
+                    },
+                    "400": {
+                        "description": "Песня уже добавлена",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка при получении данных от внешнего API",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -138,15 +162,7 @@
                         "name": "song",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/models.Song"
-                        }
-                    },
-                    {
-                        "description": "Дополнительные данные песни",
-                        "name": "songDetails",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/models.SongDetails"
+                            "$ref": "#/definitions/models.SongWithDetails"
                         }
                     }
                 ],
@@ -155,6 +171,24 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Song"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат даты. Ожидаемый формат: DD.MM.YYYY",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Детали песни не найдены",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -183,6 +217,18 @@
                 "responses": {
                     "200": {
                         "description": "Песня успешно удалена",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Песня не найдена",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка при удалении песни",
                         "schema": {
                             "type": "string"
                         }
@@ -232,6 +278,24 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "400": {
+                        "description": "Неверный формат параметров запроса",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Текст песни отсутствует",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -258,15 +322,35 @@
             "properties": {
                 "link": {
                     "description": "Ссылка на песню",
-                    "type": "string"
+                    "type": "string",
+                    "example": ""
                 },
                 "releaseDate": {
                     "description": "Дата выхода песни",
-                    "type": "string"
+                    "type": "string",
+                    "example": ""
                 },
                 "text": {
                     "description": "Текст песни",
-                    "type": "string"
+                    "type": "string",
+                    "example": ""
+                }
+            }
+        },
+        "models.SongWithDetails": {
+            "description": "Модель песни c дополнительными данными песни",
+            "type": "object",
+            "properties": {
+                "SongDetails": {
+                    "$ref": "#/definitions/models.SongDetails"
+                },
+                "group": {
+                    "type": "string",
+                    "example": ""
+                },
+                "song": {
+                    "type": "string",
+                    "example": ""
                 }
             }
         }
